fix contacts text-align

--- a/app/assets/stylesheets/main.scss
+++ b/app/assets/stylesheets/main.scss
@@ -12,6 +12,7 @@ a[href^=tel] { color: inherit; text-decoration: none; }
       .contacts {
         position: relative;
         margin: 0 30px 3em 30px;
+        text-align: right;
       }
     }
     .content {
@@ -121,6 +122,7 @@ a[href^=tel] { color: inherit; text-decoration: none; }
         right: 0;
         display: inline-block;
         position: absolute;
+        text-align: right;
       }
     }
     .content {
@@ -167,6 +169,7 @@ a[href^=tel] { color: inherit; text-decoration: none; }
         right: 0;
         display: inline-block;
         position: absolute;
+        text-align: right;
       }
     }
     header, .content, footer {
